komentarze, nowy plik

--- a/rbm_test.ipynb
+++ b/rbm_test.ipynb
@@ -9,6 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[5 4 0]\n",
+      "\n",
+      "[[ 2.91098897  1.24655253]\n",
+      " [ 0.1598881  -1.40081823]\n",
+      " [ 1.38336534  0.03617691]]\n",
+      "\n",
+      "[15.19449723  0.62948973]\n",
+      "\n",
+      "[0.99999975 0.65237375]\n",
+      "\n",
+      "[1 0]\n",
+      "\n",
       "Rekomendowane filmy dla użytkownika U1: [0 1]\n"
      ]
     }
@@ -24,20 +36,21 @@
     "# Inicjalizacja wag\n",
     "num_visible = data.shape[1]\n",
     "num_hidden = 2\n",
-    "weights = np.random.randn(num_visible, num_hidden)\n",
-    "bias_visible = np.zeros(num_visible)\n",
-    "bias_hidden = np.zeros(num_hidden)\n",
+    "weights = np.random.randn(num_visible, num_hidden) # Wagi połączeń\n",
+    "bias_visible = np.zeros(num_visible) # Wagi widocznych\n",
+    "bias_hidden = np.zeros(num_hidden) # Wagi ukrytych\n",
     "\n",
     "# Parametry algorytmu\n",
     "learning_rate = 0.1\n",
     "num_epochs = 100\n",
     "\n",
     "# Uczenie RBM przy użyciu algorytmu CD\n",
+    "once = 1\n",
     "for epoch in range(num_epochs):\n",
     "    for sample in data:\n",
     "        # Etap generacji ukrytych jednostek\n",
     "        hidden_activations = np.dot(sample, weights) + bias_hidden\n",
-    "        hidden_probs = 1 / (1 + np.exp(-hidden_activations))\n",
+    "        hidden_probs = 1 / (1 + np.exp(-hidden_activations)) # logistic function\n",
     "        hidden_states = np.random.binomial(1, hidden_probs)\n",
     "        \n",
     "        # Etap generacji rekonstrukcji\n",
@@ -49,9 +62,16 @@
     "        hidden_activations_recon = np.dot(visible_states, weights) + bias_hidden\n",
     "        hidden_probs_recon = 1 / (1 + np.exp(-hidden_activations_recon))\n",
     "        \n",
-    "        # Obliczanie gradientu\n",
+    "        # Obliczanie gradientu (macierz 0 i 1 )\n",
     "        pos_gradient = np.outer(sample, hidden_probs)\n",
     "        neg_gradient = np.outer(visible_states, hidden_probs_recon)\n",
+    "        if once:\n",
+    "            print(f'{sample}\\n')\n",
+    "            print(f'{weights}\\n')\n",
+    "            print(f'{hidden_activations}\\n')\n",
+    "            print(f'{hidden_probs}\\n')\n",
+    "            print(f'{hidden_states}\\n')\n",
+    "            once = 0\n",
     "        \n",
     "        # Aktualizacja wag\n",
     "        weights += learning_rate * (pos_gradient - neg_gradient)\n",
@@ -70,13 +90,6 @@
     "recommendations_U1 = generate_recommendations(user_U1)\n",
     "print(\"Rekomendowane filmy dla użytkownika U1:\", recommendations_U1)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
