--- a/matrix_factor.ipynb
+++ b/matrix_factor.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rekomendacje dla użytkownika 0 : [5.28705896 3.59144465 3.76965022]\n"
+      "Rekomendacje dla użytkownika 0 : [5.        4.        3.3026002]\n"
      ]
     }
    ],
@@ -26,15 +26,15 @@
     "\n",
     "# Inicjalizacja macierzy użytkowników-faktorów i przedmiotów-faktorów\n",
     "num_users, num_items = ratings.shape\n",
-    "# user_factors = np.random.rand(num_users, num_factors)\n",
-    "# item_factors = np.random.rand(num_items, num_factors)\n",
+    "user_factors = np.random.rand(num_users, num_factors)\n",
+    "item_factors = np.random.rand(num_items, num_factors)\n",
     "\n",
-    "user_factors = np.ones((num_users, num_factors))\n",
-    "item_factors = np.ones((num_items, num_factors))\n",
+    "# user_factors = np.ones((num_users, num_factors))\n",
+    "# item_factors = np.ones((num_items, num_factors))\n",
     "\n",
     "# Parametry uczenia\n",
-    "learning_rate = 0.01\n",
-    "num_epochs = 1000\n",
+    "learning_rate = 0.1\n",
+    "num_epochs = 10000\n",
     "\n",
     "# Uczenie faktoryzacji macierzy\n",
     "for epoch in range(num_epochs):\n",
@@ -49,8 +49,8 @@
     "                item_factors[j] += learning_rate * (error * user_factors[i])\n",
     "\n",
     "# Generowanie rekomendacji dla użytkownika\n",
-    "def generate_recommendations(user_idx):\n",
-    "    user_vector = user_factors[user_idx]\n",
+    "def generate_recommendations(user_index):\n",
+    "    user_vector = user_factors[user_index]\n",
     "    recommendations = np.dot(user_vector, item_factors.T)\n",
     "    return recommendations\n",
     "\n",
