random seed for data

--- a/rbm_analytics.ipynb
+++ b/rbm_analytics.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "training_data_df, test_data_df = provider.split_dataframe(ratings)\n",
+    "training_data_df, test_data_df = provider.split_dataframe(ratings, random_seed=42)\n",
     "training_data_df = training_data_df.pivot_table(index='user_id', columns='movie_id', values='rating', fill_value=0)\n",
     "test_data_df = test_data_df.pivot_table(index='user_id', columns='movie_id', values='rating', fill_value=0)\n",
     "# Change data to 0 or 1 values\n",
