--- a/recommendations/rbm_analytics.ipynb
+++ b/recommendations/rbm_analytics.ipynb
@@ -163,17 +163,19 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "import os\n",
     "import json\n",
     "\n",
     "rbm = RBM(training_data, 12, iterations=1500, random_seed=42)\n",
     "rbm.set_debug(True)\n",
     "filename = \"rbm42.json\"\n",
-    "rbm_file_path = Path(\"rbm_models/\"+filename)\n",
+    "directory = os.path.dirname(os.path.abspath(__file__))\n",
+    "rbm_file_path = Path(os.path.join(directory, \"rbm_models\", filename))\n",
     "if not rbm_file_path.is_file():\n",
     "    iter_error = rbm.train(return_error=True)\n",
     "    rbm.save_to_file(filename)\n",
     "    # saving training results to file for plotting\n",
-    "    path = Path(\"training_results/\"+filename)\n",
+    "    path = Path(os.path.join(directory, \"training_results\", filename))\n",
     "    path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    data = {\n",
     "        'iter_error': iter_error\n",
@@ -183,7 +185,7 @@
     "else:\n",
     "    rbm.load_from_file(filename)\n",
     "    # loading training results for plotting\n",
-    "    path = Path(\"training_results/\"+filename)\n",
+    "    path = Path(os.path.join(directory, \"training_results\", filename))\n",
     "    if path.is_file():\n",
     "        with path.open('r') as file:\n",
     "          data = json.load(file)\n",
