wide&deep two outputs

--- a/keras/wide_and_deep.ipynb
+++ b/keras/wide_and_deep.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "housing = fetch_california_housing()\n",
     "X_train_full, X_test, y_train_full, y_test = train_test_split(housing.data, housing.target, random_state=42)\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X_train_full, y_train_full, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functional models creation"
    ]
   },
   {
@@ -142,10 +152,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "pd.DataFrame(history.history).plot(\n",
     "    figsize=(8, 5), xlim=[0, 19], ylim=[0, 2], xticks=np.arange(0,21,2), grid=True, xlabel='Epoch', style=['r--', 'r--.', 'b-', 'b-*']\n",
     ")\n",
@@ -176,6 +182,18 @@
     "concat = tf.keras.layers.concatenate([norm_wide, hidden2])\n",
     "output = tf.keras.layers.Dense(1)(concat)\n",
     "model = tf.keras.Model(inputs=[input_wide, input_deep], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pick columns for two inputs\n",
+    "X_train_wide, X_train_deep = X_train[:, :5], X_train[:, 2:]\n",
+    "X_valid_wide, X_valid_deep = X_valid[:, :5], X_valid[:, 2:]\n",
+    "X_test_wide, X_test_deep = X_test[:, :5], X_test[:, 2:]"
    ]
   },
   {
@@ -233,12 +251,6 @@
    "source": [
     "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3)\n",
     "model.compile(loss='mse', optimizer=optimizer, metrics=['RootMeanSquaredError'])\n",
-    "\n",
-    "# pick columns for two inputs\n",
-    "X_train_wide, X_train_deep = X_train[:, :5], X_train[:, 2:]\n",
-    "X_valid_wide, X_valid_deep = X_valid[:, :5], X_valid[:, 2:]\n",
-    "X_test_wide, X_test_deep = X_test[:, :5], X_test[:, 2:]\n",
-    "\n",
     "norm_layer_wide.adapt(X_train_wide)\n",
     "norm_layer_deep.adapt(X_train_deep)\n",
     "history = model.fit((X_train_wide, X_train_deep), y_train, epochs=20, validation_data=((X_valid_wide, X_valid_deep), y_valid))"
@@ -293,6 +305,168 @@
     "    figsize=(8, 5), xlim=[0, 19], ylim=[0, 3], xticks=np.arange(0,21,2), grid=True, xlabel='Epoch', style=['r--', 'r--.', 'b-', 'b-*']\n",
     ")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_wide = tf.keras.layers.Input(shape=[5], name='input_wide')\n",
+    "input_deep = tf.keras.layers.Input(shape=[6], name='input_deep')\n",
+    "norm_layer_wide = tf.keras.layers.Normalization()\n",
+    "norm_layer_deep = tf.keras.layers.Normalization()\n",
+    "norm_wide = norm_layer_wide(input_wide)\n",
+    "norm_deep = norm_layer_deep(input_deep)\n",
+    "hidden1 = tf.keras.layers.Dense(30, activation=\"relu\")(norm_deep)\n",
+    "hidden2 = tf.keras.layers.Dense(30, activation=\"relu\")(hidden1)\n",
+    "concat = tf.keras.layers.concatenate([norm_wide, hidden2])\n",
+    "output = tf.keras.layers.Dense(1, name='output')(concat)\n",
+    "aux_output = tf.keras.layers.Dense(1, name='aux_output')(hidden2)\n",
+    "model = tf.keras.Model(inputs=[input_wide, input_deep], outputs=[output, aux_output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3)\n",
+    "model.compile(loss={'output':'mse','aux_output': 'mse'}, loss_weights={'output':0.9,'aux_output': 0.1}, optimizer=optimizer, metrics=['RootMeanSquaredError'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "363/363 [==============================] - 2s 3ms/step - loss: 1.6790 - output_loss: 1.6272 - aux_output_loss: 2.1448 - output_root_mean_squared_error: 1.2756 - aux_output_root_mean_squared_error: 1.4645 - val_loss: 3.0729 - val_output_loss: 2.4573 - val_aux_output_loss: 8.6139 - val_output_root_mean_squared_error: 1.5676 - val_aux_output_root_mean_squared_error: 2.9349\n",
+      "Epoch 2/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.5060 - output_loss: 0.4729 - aux_output_loss: 0.8046 - output_root_mean_squared_error: 0.6876 - aux_output_root_mean_squared_error: 0.8970 - val_loss: 1.1307 - val_output_loss: 0.7360 - val_aux_output_loss: 4.6833 - val_output_root_mean_squared_error: 0.8579 - val_aux_output_root_mean_squared_error: 2.1641\n",
+      "Epoch 3/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.4403 - output_loss: 0.4217 - aux_output_loss: 0.6083 - output_root_mean_squared_error: 0.6493 - aux_output_root_mean_squared_error: 0.7800 - val_loss: 1.9649 - val_output_loss: 1.6513 - val_aux_output_loss: 4.7873 - val_output_root_mean_squared_error: 1.2850 - val_aux_output_root_mean_squared_error: 2.1880\n",
+      "Epoch 4/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.4193 - output_loss: 0.4033 - aux_output_loss: 0.5638 - output_root_mean_squared_error: 0.6350 - aux_output_root_mean_squared_error: 0.7509 - val_loss: 1.1723 - val_output_loss: 1.1015 - val_aux_output_loss: 1.8090 - val_output_root_mean_squared_error: 1.0495 - val_aux_output_root_mean_squared_error: 1.3450\n",
+      "Epoch 5/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3982 - output_loss: 0.3846 - aux_output_loss: 0.5209 - output_root_mean_squared_error: 0.6201 - aux_output_root_mean_squared_error: 0.7217 - val_loss: 2.8852 - val_output_loss: 2.6427 - val_aux_output_loss: 5.0681 - val_output_root_mean_squared_error: 1.6256 - val_aux_output_root_mean_squared_error: 2.2512\n",
+      "Epoch 6/20\n",
+      "363/363 [==============================] - 1s 3ms/step - loss: 0.3963 - output_loss: 0.3835 - aux_output_loss: 0.5119 - output_root_mean_squared_error: 0.6193 - aux_output_root_mean_squared_error: 0.7155 - val_loss: 3.4408 - val_output_loss: 3.7727 - val_aux_output_loss: 0.4529 - val_output_root_mean_squared_error: 1.9424 - val_aux_output_root_mean_squared_error: 0.6730\n",
+      "Epoch 7/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3925 - output_loss: 0.3844 - aux_output_loss: 0.4656 - output_root_mean_squared_error: 0.6200 - aux_output_root_mean_squared_error: 0.6823 - val_loss: 5.4241 - val_output_loss: 5.5190 - val_aux_output_loss: 4.5704 - val_output_root_mean_squared_error: 2.3492 - val_aux_output_root_mean_squared_error: 2.1378\n",
+      "Epoch 8/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.4006 - output_loss: 0.3919 - aux_output_loss: 0.4788 - output_root_mean_squared_error: 0.6260 - aux_output_root_mean_squared_error: 0.6920 - val_loss: 1.8577 - val_output_loss: 2.0085 - val_aux_output_loss: 0.5007 - val_output_root_mean_squared_error: 1.4172 - val_aux_output_root_mean_squared_error: 0.7076\n",
+      "Epoch 9/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3714 - output_loss: 0.3639 - aux_output_loss: 0.4391 - output_root_mean_squared_error: 0.6032 - aux_output_root_mean_squared_error: 0.6627 - val_loss: 1.9212 - val_output_loss: 1.9278 - val_aux_output_loss: 1.8623 - val_output_root_mean_squared_error: 1.3884 - val_aux_output_root_mean_squared_error: 1.3647\n",
+      "Epoch 10/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3664 - output_loss: 0.3581 - aux_output_loss: 0.4411 - output_root_mean_squared_error: 0.5984 - aux_output_root_mean_squared_error: 0.6642 - val_loss: 0.5869 - val_output_loss: 0.6041 - val_aux_output_loss: 0.4315 - val_output_root_mean_squared_error: 0.7773 - val_aux_output_root_mean_squared_error: 0.6569\n",
+      "Epoch 11/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3561 - output_loss: 0.3480 - aux_output_loss: 0.4289 - output_root_mean_squared_error: 0.5899 - aux_output_root_mean_squared_error: 0.6549 - val_loss: 1.4617 - val_output_loss: 1.4077 - val_aux_output_loss: 1.9473 - val_output_root_mean_squared_error: 1.1865 - val_aux_output_root_mean_squared_error: 1.3955\n",
+      "Epoch 12/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3544 - output_loss: 0.3463 - aux_output_loss: 0.4268 - output_root_mean_squared_error: 0.5885 - aux_output_root_mean_squared_error: 0.6533 - val_loss: 0.8326 - val_output_loss: 0.8802 - val_aux_output_loss: 0.4039 - val_output_root_mean_squared_error: 0.9382 - val_aux_output_root_mean_squared_error: 0.6356\n",
+      "Epoch 13/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3544 - output_loss: 0.3475 - aux_output_loss: 0.4168 - output_root_mean_squared_error: 0.5895 - aux_output_root_mean_squared_error: 0.6456 - val_loss: 1.9159 - val_output_loss: 1.9438 - val_aux_output_loss: 1.6652 - val_output_root_mean_squared_error: 1.3942 - val_aux_output_root_mean_squared_error: 1.2904\n",
+      "Epoch 14/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3510 - output_loss: 0.3437 - aux_output_loss: 0.4171 - output_root_mean_squared_error: 0.5862 - aux_output_root_mean_squared_error: 0.6458 - val_loss: 0.8972 - val_output_loss: 0.9508 - val_aux_output_loss: 0.4146 - val_output_root_mean_squared_error: 0.9751 - val_aux_output_root_mean_squared_error: 0.6439\n",
+      "Epoch 15/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3470 - output_loss: 0.3402 - aux_output_loss: 0.4075 - output_root_mean_squared_error: 0.5833 - aux_output_root_mean_squared_error: 0.6383 - val_loss: 1.5907 - val_output_loss: 1.6124 - val_aux_output_loss: 1.3951 - val_output_root_mean_squared_error: 1.2698 - val_aux_output_root_mean_squared_error: 1.1811\n",
+      "Epoch 16/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3456 - output_loss: 0.3388 - aux_output_loss: 0.4065 - output_root_mean_squared_error: 0.5821 - aux_output_root_mean_squared_error: 0.6376 - val_loss: 0.8003 - val_output_loss: 0.8441 - val_aux_output_loss: 0.4062 - val_output_root_mean_squared_error: 0.9187 - val_aux_output_root_mean_squared_error: 0.6373\n",
+      "Epoch 17/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3404 - output_loss: 0.3341 - aux_output_loss: 0.3974 - output_root_mean_squared_error: 0.5780 - aux_output_root_mean_squared_error: 0.6304 - val_loss: 2.1601 - val_output_loss: 2.1976 - val_aux_output_loss: 1.8228 - val_output_root_mean_squared_error: 1.4824 - val_aux_output_root_mean_squared_error: 1.3501\n",
+      "Epoch 18/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3424 - output_loss: 0.3359 - aux_output_loss: 0.4016 - output_root_mean_squared_error: 0.5795 - aux_output_root_mean_squared_error: 0.6337 - val_loss: 1.7892 - val_output_loss: 1.9161 - val_aux_output_loss: 0.6473 - val_output_root_mean_squared_error: 1.3842 - val_aux_output_root_mean_squared_error: 0.8045\n",
+      "Epoch 19/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3424 - output_loss: 0.3366 - aux_output_loss: 0.3947 - output_root_mean_squared_error: 0.5802 - aux_output_root_mean_squared_error: 0.6283 - val_loss: 0.6248 - val_output_loss: 0.6458 - val_aux_output_loss: 0.4356 - val_output_root_mean_squared_error: 0.8036 - val_aux_output_root_mean_squared_error: 0.6600\n",
+      "Epoch 20/20\n",
+      "363/363 [==============================] - 1s 2ms/step - loss: 0.3339 - output_loss: 0.3274 - aux_output_loss: 0.3919 - output_root_mean_squared_error: 0.5722 - aux_output_root_mean_squared_error: 0.6260 - val_loss: 0.3213 - val_output_loss: 0.3145 - val_aux_output_loss: 0.3826 - val_output_root_mean_squared_error: 0.5608 - val_aux_output_root_mean_squared_error: 0.6186\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm_layer_wide.adapt(X_train_wide)\n",
+    "norm_layer_deep.adapt(X_train_deep)\n",
+    "history = model.fit({'input_wide': X_train_wide, 'input_deep': X_train_deep}, \n",
+    "                    {'output': y_train, 'aux_output': y_train}, \n",
+    "                    validation_data=({'input_wide': X_valid_wide, 'input_deep': X_valid_deep},{'output': y_valid, 'aux_output': y_valid}),\n",
+    "                    epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "162/162 [==============================] - 0s 2ms/step - loss: 0.3374 - output_loss: 0.3315 - aux_output_loss: 0.3909 - output_root_mean_squared_error: 0.5757 - aux_output_root_mean_squared_error: 0.6253\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.33741798996925354,\n",
+       " 0.33147016167640686,\n",
+       " 0.39094778895378113,\n",
+       " 0.5757344365119934,\n",
+       " 0.625258207321167]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_results = model.evaluate({'input_wide': X_test_wide, 'input_deep': X_test_deep}, {'output': y_test, 'aux_output': y_test})\n",
+    "eval_results # weighted_sum_of_losses, main_loss, aux_loss, main_rmse, aux_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "162/162 [==============================] - 0s 2ms/step - loss: 0.3374 - output_loss: 0.3315 - aux_output_loss: 0.3909 - output_root_mean_squared_error: 0.5757 - aux_output_root_mean_squared_error: 0.6253\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 0.33741798996925354,\n",
+       " 'output_loss': 0.33147016167640686,\n",
+       " 'aux_output_loss': 0.39094778895378113,\n",
+       " 'output_root_mean_squared_error': 0.5757344365119934,\n",
+       " 'aux_output_root_mean_squared_error': 0.625258207321167}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_results_dict = model.evaluate({'input_wide': X_test_wide, 'input_deep': X_test_deep}, {'output': y_test, 'aux_output': y_test}, return_dict=True)\n",
+    "eval_results_dict"
    ]
   }
  ],
