--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_huber(threshold=1.0):\n",
+    "    def huber_fn(y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss = threshold * tf.abs(error) - threshold**2 * 0.5\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    return huber_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +66,153 @@
     "        squared_loss = tf.square(error) / 2\n",
     "        linear_loss = self.threshold * tf.abs(error) - self.threshold**2 * 0.5\n",
     "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, \"threshold\": self.threshold}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Activation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softplus(z):\n",
+    "    return tf.math.log(1.0 + tf.exp(z))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initializer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def glorot_initializer(shape, dtype=tf.float32):\n",
+    "    stddev = tf.sqrt(2. / (shape[0] + shape[1]))\n",
+    "    return tf.random.normal(shape, stddev=stddev, dtype=dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regularizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def l1_regularizer(weights):\n",
+    "    return tf.reduce_sum(tf.abs(0.01 * weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def positive_weights(weights):\n",
+    "    return tf.where(weights < 0., tf.zeros_like(weights), weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = tf.keras.layers.Dense(1,\n",
+    "                              activation=softplus,\n",
+    "                              kernel_initializer=glorot_initializer,\n",
+    "                              kernel_regularizer=l1_regularizer,\n",
+    "                              kernel_constraint=positive_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regularizer with custom factor as class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class L1Regularizer(tf.keras.regularizers.Regularizer):\n",
+    "    def __init__(self, factor) -> None:\n",
+    "        self.factor = factor\n",
+    "\n",
+    "    def __call__(self, weights):\n",
+    "        return tf.reduce_sum(tf.abs(self.factor * weights))\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        return {\"factor\": self.factor}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HuberMetric(tf.keras.metrics.Metric):\n",
+    "    def __init__(self, threshold, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.threshold = threshold\n",
+    "        self.huber_fn = create_huber(threshold)\n",
+    "        self.total = self.add_weight(\"total\", initializer=\"zeros\")\n",
+    "        self.count = self.add_weight(\"count\", initializer=\"zeros\")\n",
+    "\n",
+    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
+    "        sample_metrics = self.huber_fn(y_true, y_pred)\n",
+    "        self.total.assign_add(tf.reduce_sum(sample_metrics))\n",
+    "        self.count.assign_add(tf.cast(tf.size(y_true), tf.float32))\n",
+    "\n",
+    "    def result(self):\n",
+    "        return self.total / self.count\n",
     "    \n",
     "    def get_config(self):\n",
     "        base_config = super().get_config()\n",
