--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -218,6 +218,53 @@
     "        base_config = super().get_config()\n",
     "        return {**base_config, \"threshold\": self.threshold}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Layer (no weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exponential_layer = tf.keras.layers.Lambda(lambda x: tf.exp(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Layer (with weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomDense(tf.keras.layers.Layer):\n",
+    "    def __init__(self, units, activation=None, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.units = units\n",
+    "        self.activation = activation\n",
+    "    \n",
+    "    def build(self, input_shape):\n",
+    "        self.kernel = self.add_weight(name=\"kernel\", shape=[input_shape[-1], self.units], initializer='glorot_normal')\n",
+    "        self.bias = self.add_weight(name=\"bias\", shape=[self.units], initializer='zeros')\n",
+    "    \n",
+    "    def call(self, X):\n",
+    "        return self.activation(X @ self.kernel + self.bias)\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, \"units\": self.units, \"activation\": tf.keras.activations.serialize(self.activation)}\n"
+   ]
   }
  ],
  "metadata": {
