--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -265,6 +265,53 @@
     "        base_config = super().get_config()\n",
     "        return {**base_config, \"units\": self.units, \"activation\": tf.keras.activations.serialize(self.activation)}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Custom model with residual block layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualBlock(tf.keras.layers.Layer):\n",
+    "    def __init__(self, n_layers, n_neurons, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [tf.keras.layers.Dense(n_neurons, activation='relu', kernel_initializer='he_normal') for _ in range(n_layers)]\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        return inputs + Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualRegressor(tf.keras.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hiddenl = tf.keras.layers.Dense(30, activation='relu', kernel_initializer='he_normal')\n",
+    "        self.block1 = ResidualBlock(2, 30)\n",
+    "        self.block2 = ResidualBlock(2, 30)\n",
+    "        self.out = tf.keras.layers.Dense(output_dim)\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = self.hiddenl(inputs)\n",
+    "        for _ in range(1 + 3):\n",
+    "            Z = self.block1(Z)\n",
+    "        Z = self.block2(Z)\n",
+    "        return self.out(Z)"
+   ]
   }
  ],
  "metadata": {
