loss fun counting other elements (ex. reconstruction loss)

--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Custom model with residual block layer"
+    "Model with residual block layer"
    ]
   },
   {
@@ -310,6 +310,43 @@
     "        for _ in range(1 + 3):\n",
     "            Z = self.block1(Z)\n",
     "        Z = self.block2(Z)\n",
+    "        return self.out(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loss function counting other elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReconstructingRegressor(tf.keras.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [tf.keras.layers.Dense(30, activation='relu', kernel_initializer='he_normal') for _ in range(5)]\n",
+    "        self.out = tf.keras.layers.Dense(output_dim)\n",
+    "        self.reconstruction_mean = tf.keras.metrics.Mean(name=\"reconstruction_error\")\n",
+    "\n",
+    "    def build(self, batch_input_shape):\n",
+    "        n_inputs = batch_input_shape[-1]\n",
+    "        self.reconstruct = tf.keras.layers.Dense(n_inputs)\n",
+    "\n",
+    "    def call(self, inputs, training=False):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        reconstruction = self.reconstruct(Z)\n",
+    "        recon_loss = tf.reduce_mean(tf.square(reconstruction - inputs))\n",
+    "        self.add_loss(0.05 * recon_loss)\n",
+    "        if training:\n",
+    "            result = self.reconstruction_mean(recon_loss)\n",
+    "            self.add_metric(result)\n",
     "        return self.out(Z)"
    ]
   }
