gradients calc, learning iterations

--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -18,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +352,258 @@
     "            result = self.reconstruction_mean(recon_loss)\n",
     "            self.add_metric(result)\n",
     "        return self.out(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradients calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + 2 * w1 * w2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=36.0>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1, w2 = tf.Variable(5.), tf.Variable(3.)\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2]) # tape is deleted after use\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "dz_dw1 = tape.gradient(z, w1)\n",
+    "dz_dw2 = tape.gradient(z, w2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1, c2 = tf.constant(5.), tf.constant(3.)\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(c1, c2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [c1, c2]) # tape usually works only for variables\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=36.0>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with tf.GradientTape() as tape:\n",
+    "    tape.watch(c1) # watched tensors can be processed\n",
+    "    tape.watch(c2)\n",
+    "    z = f(c1, c2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [c1, c2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=30.0>, None]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + tf.stop_gradient(2 * w1 * w2) # partially stopped back propagation\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Learning iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2_reg = tf.keras.regularizers.l2(0.05)\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(30, activation='relu', kernel_initializer='he_normal', kernel_regularizer=l2_reg),\n",
+    "    tf.keras.layers.Dense(1, kernel_regularizer=l2_reg)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fetching random learning samples\n",
+    "def random_batch(X, y, batch_size=32):\n",
+    "    idx = np.random.randint(len(X), size=batch_size)\n",
+    "    return X[idx], y[idx]\n",
+    "\n",
+    "# displaying learning progress\n",
+    "def print_status_bar(step, total, loss, metrics=None):\n",
+    "    metrics = \" - \".join([f\"{m.name}: {m.result():.4f}\" for m in [loss] + (metrics or [])])\n",
+    "    end = \"\" if step < total else \"\\n\"\n",
+    "    print(f\"\\r{step}/{total} - \" + metrics, end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data\n",
+    "housing = fetch_california_housing()\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(\n",
+    "    housing.data, housing.target.reshape(-1, 1), random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X_train_full, y_train_full, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_valid_scaled = scaler.transform(X_valid)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# hiperparameters\n",
+    "n_epochs = 5\n",
+    "batch_size = 32\n",
+    "n_steps = len(X_train) // batch_size\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)\n",
+    "loss_fn = tf.keras.losses.mean_squared_error\n",
+    "mean_loss = tf.keras.metrics.Mean(name='mean_loss')\n",
+    "metrics = [tf.keras.metrics.MeanAbsoluteError()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "362/362 - mean_loss: 3.0170 - mean_absolute_error: 0.6767\n",
+      "11610/11610 - mean_loss: 3.0170 - mean_absolute_error: 0.6767\n",
+      "Epoch 2/5\n",
+      "362/362 - mean_loss: 2.0820 - mean_absolute_error: 0.5647\n",
+      "11610/11610 - mean_loss: 2.0820 - mean_absolute_error: 0.5647\n",
+      "Epoch 3/5\n",
+      "362/362 - mean_loss: 1.3927 - mean_absolute_error: 0.5114\n",
+      "11610/11610 - mean_loss: 1.3927 - mean_absolute_error: 0.5114\n",
+      "Epoch 4/5\n",
+      "362/362 - mean_loss: 0.9670 - mean_absolute_error: 0.4914\n",
+      "11610/11610 - mean_loss: 0.9670 - mean_absolute_error: 0.4914\n",
+      "Epoch 5/5\n",
+      "362/362 - mean_loss: 0.7787 - mean_absolute_error: 0.4880\n",
+      "11610/11610 - mean_loss: 0.7787 - mean_absolute_error: 0.4880\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(1, n_epochs+1):\n",
+    "    print('Epoch {}/{}'.format(epoch, n_epochs))\n",
+    "    for step in range(1, n_steps+1):\n",
+    "        X_batch, y_batch = random_batch(X_train_scaled, y_train)\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            y_pred = model(X_batch, training=True) # using model to predict values\n",
+    "            main_loss = tf.reduce_mean(loss_fn(y_batch, y_pred)) # prediction loss = mean of (mse for each sample)\n",
+    "            loss = tf.add_n([main_loss] + model.losses) # overall loss = sum of prediction loss and regularization loss\n",
+    "\n",
+    "        gradients = tape.gradient(loss, model.trainable_variables) # loss function gradients for each modifiable variable\n",
+    "        optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "        mean_loss(loss)\n",
+    "        for metric in metrics:\n",
+    "            metric(y_batch, y_pred)\n",
+    "\n",
+    "        print_status_bar(step, n_steps, mean_loss, metrics)\n",
+    "\n",
+    "    print_status_bar(len(y_train), len(y_train), mean_loss, metrics)\n",
+    "    for metric in [mean_loss] + metrics:\n",
+    "        metric.reset_states()"
    ]
   }
  ],
