--- a/tf/custom_elements.ipynb
+++ b/tf/custom_elements.ipynb
@@ -605,6 +605,46 @@
     "    for metric in [mean_loss] + metrics:\n",
     "        metric.reset_states()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions and graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube(x):\n",
+    "    return x ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tensorflow function\n",
+    "tf_cube = tf.function(cube)\n",
+    "tf_cube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternatively tf function as decorator\n",
+    "@tf.function\n",
+    "def tf_cube(x):\n",
+    "    return x ** 3"
+   ]
   }
  ],
  "metadata": {
