--- a/tf/data_preprocessing.ipynb
+++ b/tf/data_preprocessing.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -18,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +31,7 @@
        "<_TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +188,59 @@
     "dataset = dataset.shuffle(buffer_size=4, seed=42)\n",
     "for item in dataset:\n",
     "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = fetch_california_housing()\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(housing.data, housing.target, random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train_full, y_train_full, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_to_csv(data, dataset_name, prefix, header, chunks_num):\n",
+    "    main_dir = Path() / 'datasets' / dataset_name\n",
+    "    main_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    filename = \"{}_{}_{:02d}.csv\" # dataset name, prefix, file_num\n",
+    "\n",
+    "    all_files = []\n",
+    "    for idx, chunk in enumerate(np.array_split(data, chunks_num)):\n",
+    "        file_path = main_dir / filename.format(dataset_name, prefix, idx)\n",
+    "        with open(file_path, 'w') as file:\n",
+    "            if header is not None:\n",
+    "                file.write(header + '\\n')\n",
+    "            for row in chunk:\n",
+    "                file.write(','.join([repr(col) for col in row]) + '\\n')\n",
+    "        all_files.append(file_path)\n",
+    "    \n",
+    "    return all_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = np.c_[X_train, y_train]\n",
+    "valid_data = np.c_[X_valid, y_valid]\n",
+    "test_data = np.c_[X_test, y_test]\n",
+    "header_cols = housing.feature_names + [\"MedianHouseValue\"]\n",
+    "header = \",\".join(header_cols)\n",
+    "dataset_name = 'housing'\n",
+    "\n",
+    "train_filepaths = save_to_csv(train_data, dataset_name, \"train\", header, 20)\n",
+    "valid_filepaths = save_to_csv(valid_data, dataset_name, \"valid\", header, 10)\n",
+    "test_filepaths = save_to_csv(test_data, dataset_name, \"test\", header, 10)"
    ]
   }
  ],
